WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117021
[GTK] Fix pass_by_value coverity warning in ChromeClientGtk
https://bugs.webkit.org/show_bug.cgi?id=117021
Summary
[GTK] Fix pass_by_value coverity warning in ChromeClientGtk
Enrique Ocaña
Reported
2013-05-30 01:21:50 PDT
Coverity warned about this issue in ChromeClientGtk: pass_by_value: Passing parameter dirtyRegion of type WebCore::Region (size 448 bytes) by value. This was documented in
https://docs.google.com/spreadsheet/ccc?key=0AvP3bJqGv0uXdExmcXU4anowQ3E2M0luWkltZXFuSEE#gid=0
(row 7033), linked from
Bug #104114
.
Attachments
Patch
(1.49 KB, patch)
2013-05-30 01:33 PDT
,
Enrique Ocaña
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrique Ocaña
Comment 1
2013-05-30 01:33:24 PDT
Created
attachment 203322
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-30 13:39:04 PDT
Comment on
attachment 203322
[details]
Patch Clearing flags on attachment: 203322 Committed
r150976
: <
http://trac.webkit.org/changeset/150976
>
WebKit Commit Bot
Comment 3
2013-05-30 13:39:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug