[GTK] Fix pass_by_value coverity warning in ChromeClientGtk https://bugs.webkit.org/show_bug.cgi?id=117021

Patch by Enrique Ocana Gonzalez <eocanha@igalia.com> on 2013-05-30
Reviewed by Anders Carlsson.

Pass dirtyRegion parameter in paintWebView() by reference to avoid object copying.

* WebCoreSupport/ChromeClientGtk.cpp:
(WebKit::paintWebView):

Canonical link: https://commits.webkit.org/135306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150976 268f45cc-cd09-0410-ab3c-d52691b4dbfc